<?xml version="1.0"?>
<package format="2">
  <name>ppo_indoor_navigation</name>
  <version>0.1.0</version>
  <description>Proximal Policy Optimization based indoor navigation system</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>